[tool.poetry]
name = "{{cookiecutter.python_package_name}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.author}} <{{cookiecutter.author_email}}>"]

[tool.poetry.dependencies]
python = ">={{cookiecutter.minimum_python_version}},<3.12"
python-dotenv = "^0.21.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
bump2version = "^1.0.1"
cookiecutter = "^2.1.1"
ipykernel = "^6.19.4"
isort = "^5.11.4"
nb-black-only = ">=1.0.9"
pre-commit = "^2.21.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
